# zprp-ffmpeg

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  LICENSE  README.rst  codecov.yml  funding.md  pyproject.toml  pyproject.toml.old  pytest.ini  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: changelog.yml  github-actions.yml  lint.yml
ci/templates/.github/workflows/: github-actions.yml
docs/: conf.py  installation.rst  usage.rst
docs/reference/: index.rst  zprp_ffmpeg.rst
examples/: basic.py  concat.py  err.txt  fade.py  ffmpeg.ipynb  fluent_scale.py  minimal_hflip.py  overlay.py  scale.py  view.py
src/: generate_filters.py
src/filters_autogen/: .gitignore  README.md  filter_classes.py  gen_python_functions.py  generate_filters.py  make_file.py  parse_ffmpeg.py  parse_ffmpeg_filters.py
src/filters_autogen/ffmpeg_patches/: avstring.h  emms.h  patch_source.sh
src/filters_autogen/ffmpeg_patches/libavutil/: thread.h
src/filters_autogen/ffmpeg_patches/va/: va.h
src/zprp_ffmpeg/: BaseCommunicator.py  BaseConnector.py  FilterGraph.py  ProcessConnector.py  __init__.py  __main__.py  _api_compat.py  _zprp_ffmpeg.c  base_connector.py  cli.py  filter_classes.py  filter_graph.py  filters.py  generated_filters.py  probe.py  process_connector.py  view.py
tests/: test_ProcessConnector.py  test_auto_make_filters.py  test_autogen.py  test_filter.py  test_keyframes.py  test_kkroening_api.py  test_process_connector.py  test_writing_filters_file.py  test_zprp_ffmpeg.py
tests/assets/: allfilters.c  config.h  template1.res  template2.res  vf_oneoption.c
tests/assets/libavfilter/: avfilter.h  textutils.c  vf_default_filterpads.c  vf_named_constants.c  vf_oneoption.c  vf_simple.c
tests/assets/libavutil/: .gitignore  avutil.h  rational.h
